--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0"
+    "eslint": "^8.34.0",
+    "eslint-config-react-app": "^7.0.1",
+    "vite": "^4.1.0",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
