--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.2",
     "redux": "^4.2.1",
     "vite-plugin-svgr": "^2.4.0"
   },
