--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@redux-devtools/extension": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "redux": "^4.2.1"
@@ -26,6 +27,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.34.0",
     "eslint-config-react-app": "^7.0.1",
+    "sass": "^1.58.3",
     "vite": "^4.1.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-svgr": "^2.4.0"
